--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="login-page">
+    <div class="animated-bg"></div>
     <div class="login-container">
         <div class="login-box">
             <div class="login-header">
