--- a/templates/login.html
+++ b/templates/login.html
@@ -11,8 +11,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="login-header">
-                <h1>Escuela Interamericana</h1>
-                <h2>Record Digital</h2>
+                <img src="/images/logo-blanco.png" alt="Escuela Interamericana" class="login-logo">
             </div>
             <form id="loginForm" class="login-form">
                 <div class="form-group">
