--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="login-page">
-    <div class="animated-bg"></div>
+    <div class="animated-bg">
+        <div class="shape shape-circle-1"></div>
+        <div class="shape shape-circle-2"></div>
+        <div class="shape shape-circle-3"></div>
+        <div class="shape shape-triangle-1"></div>
+        <div class="shape shape-triangle-2"></div>
+        <div class="shape shape-triangle-3"></div>
+    </div>
     <div class="login-container">
         <div class="login-box">
             <div class="login-header">
