--- a/templates/login.html
+++ b/templates/login.html
@@ -15,6 +15,9 @@
         <div class="shape shape-triangle-2"></div>
         <div class="shape shape-triangle-3"></div>
     </div>
+    <!-- Notificaciones -->
+    <div id="notifications" class="notifications"></div>
+    
     <div class="login-container">
         <div class="login-box">
             <div class="login-header">
@@ -30,7 +33,6 @@
                     <input type="password" id="password" name="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
-                <div id="loginError" class="error-message"></div>
             </form>
         </div>
     </div>
