--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,8 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="/images/logo-color.png" alt="Escuela Interamericana" class="nav-logo-img">
-                <h2>Escuela Interamericana</h2>
+                <img src="/images/logo-blanco.png" alt="Escuela Interamericana" class="nav-logo-img">
             </div>
             <button class="nav-toggle" id="navToggle">
                 <span></span>
