--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -30,7 +30,13 @@
                 <li id="emergencyNav" style="display:none;"><a href="#" data-page="emergency" class="nav-link">Emergencias</a></li>
                 <li id="adminNav" style="display:none;"><a href="#" data-page="admin" class="nav-link">Administración</a></li>
                 <li><a href="#" data-page="profile" class="nav-link" id="profileNav">Mi Perfil</a></li>
-                <li><a href="#" id="logoutBtn" class="nav-link">Cerrar Sesión</a></li>
+                <li><a href="#" id="logoutBtn" class="nav-link logout-icon" title="Cerrar Sesión">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path>
+                        <polyline points="16 17 21 12 16 7"></polyline>
+                        <line x1="21" y1="12" x2="9" y2="12"></line>
+                    </svg>
+                </a></li>
             </ul>
         </div>
     </nav>
