--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,6 +14,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <img src="/images/logo-blanco.png" alt="Escuela Interamericana" class="nav-logo-img">
+                <h2>Escuela Interamericana</h2>
             </div>
             <button class="nav-toggle" id="navToggle">
                 <span></span>
